# goblins-lot

./: CMakeLists.txt  README.md
Goblin Camp/include/: Faction.hpp  Game.hpp  Map.hpp  NPC.hpp  stdafx.hpp
Goblin Camp/src/: Faction.cpp  Game.cpp  Map.cpp  NPC.cpp
cmake/: FindProve.cmake
game/: .editorconfig  CHANGELOG  CMakeLists.txt  Readme.md  Readme.txt  goblins-lot.desktop
game/include/: Blueprint.hpp  CoordExtra.hpp  Coordinate.hpp  CoordinateMap.hpp  Designate.hpp  Faction.hpp  Game.hpp  Map.hpp  MapRenderer.hpp  NPC.hpp  Random.hpp  TCODMapRenderer.hpp  UI.hpp  stdafx.hpp
game/include/UI/: SideBar.hpp
game/include/tileRenderer/: TileSetRenderer.hpp
game/lib/gcamp/: utils.py
game/lib/mod.example/dummy/: __init__.py  greeter.py
game/src/: Announce.cpp  Attack.cpp  Blood.cpp  Blueprint.cpp  Camp.cpp  Construction.cpp  Container.cpp  Coordinate.cpp  Designate.cpp  Door.cpp  Entity.cpp  Events.cpp  Faction.cpp  Farmplot.cpp  Filth.cpp  Fire.cpp  GCamp.cpp  Game.cpp  Item.cpp  Job.cpp  JobManager.cpp  KuhnMunkres.cpp  Logger.cpp  Map.cpp  MapMarker.cpp  MapRenderer.cpp  NPC.cpp  NatureObject.cpp  Random.cpp  SpawningPool.cpp  Spell.cpp  Squad.cpp  Stats.cpp  StatusEffect.cpp  StockManager.cpp  Stockpile.cpp  TCODMapRenderer.cpp  Tile.cpp  Trap.cpp  UI.cpp  (+3 more)
game/src/UI/: AnnounceDialog.cpp  ConstructionDialog.cpp  DevConsole.cpp  JobDialog.cpp  Menu.cpp  MessageBox.cpp  NPCDialog.cpp  SideBar.cpp  SquadsDialog.cpp  StockManagerDialog.cpp  Tooltip.cpp  UIComponents.cpp
game/src/data/: Config.cpp  Data.cpp  Mods.cpp  Paths.cpp  Serialization.cpp  Tilesets.cpp
game/src/platform/linux/: DataImpl.cpp
game/src/platform/osx/: DataImpl.cpp
game/src/platform/unix/: main.cpp
game/src/platform/windows/: CommandLine.cpp  CrashHandler.cpp  DataImpl.cpp  DebugImpl.cpp  TSSCleanup.cpp  main.cpp
game/src/scripting/: API.cpp  Engine.cpp  Event.cpp
game/src/scripting/_gcampapi/: Functions.cpp  LoggerStream.cpp  PyConstruction.cpp  PyItem.cpp
game/src/tileRenderer/: ConstructionSprite.cpp  DrawConstructionVisitor.cpp  ItemSprite.cpp  NPCSprite.cpp  NatureObjectSpriteSet.cpp  PermutationTable.cpp  SpellSpriteSet.cpp  Sprite.cpp  SpriteSetFactories.cpp  StatusEffectSprite.cpp  TerrainSprite.cpp  TileSet.cpp  TileSetLoader.cpp  TileSetRenderer.cpp  TileSetTexture.cpp  TilesetParserV1.cpp  TilesetParserV2.cpp
game/src/tileRenderer/ogl/: OGLFunctionExt.cpp  OGLResources.cpp  OGLSprite.cpp  OGLTilesetRenderer.cpp  OGLViewportLayer.cpp
game/src/tileRenderer/sdl/: SDLSprite.cpp  SDLTilesetRenderer.cpp
t/: 010-Coordinate.cpp  020-CoordMap.cpp  020-CoordinateMap.cpp  030-CoordRange.cpp  CMakeLists.txt
