ADD_CUSTOM_TARGET(build-test)

ADD_LIBRARY( LibTAPpp  EXCLUDE_FROM_ALL  "libtappp/src/tap++.cpp")
TARGET_INCLUDE_DIRECTORIES(LibTAPpp PUBLIC "libtappp/include")

FILE(GLOB TEST_SRC CONFIGURE_DEPENDS "*.cpp")

FOREACH(TEST_PATH ${TEST_SRC})
	GET_FILENAME_COMPONENT(TEST_NAME ${TEST_PATH} NAME)

	ADD_EXECUTABLE("${TEST_NAME}.t" EXCLUDE_FROM_ALL "${TEST_NAME}")
	TARGET_LINK_LIBRARIES("${TEST_NAME}.t" "goblins-lot-objs")

	TARGET_LINK_LIBRARIES("${TEST_NAME}.t" LibTAPpp)
	ADD_DEPENDENCIES("build-test" "${TEST_NAME}.t")
ENDFOREACH()

IF (Prove_FOUND)
	ADD_CUSTOM_TARGET(test COMMAND "cd" "${CMAKE_CURRENT_BINARY_DIR};" "${Prove_EXECUTABLE}" "." DEPENDS build-test)
ELSE()
	ADD_CUSTOM_TARGET(test COMMAND echo "Prove have not been found. Can not run tests")
ENDIF()
